# Ramen

./: README.md
vfx/OfxHostSupport/expat-2.0.1/: CMakeLists.txt
vfx/asl-1.0.42/: CMakeLists.txt  README_Build.txt  release_notes.txt
vfx/asl-1.0.42/adobe/: adam.hpp  adam_evaluate.hpp  adam_parser.hpp  any_iterator.hpp  arg_stream.hpp  array.hpp  basic_sheet.hpp  circular_queue.hpp  closed_hash.hpp  cmath.hpp  config.hpp  copy_on_write.hpp  dancing_links.hpp  eve_evaluate.hpp  eve_parser.hpp  iomanip.hpp  memory.hpp  name_fwd.hpp  old_any_regular.hpp  once.hpp  poly.hpp  poly_copyable.hpp  poly_placeable.hpp  poly_regular.hpp  string.hpp  typeinfo.hpp  vector.hpp  virtual_machine.hpp
vfx/asl-1.0.42/adobe/algorithm/: find.hpp  sorted.hpp
vfx/asl-1.0.42/adobe/functional/: operator.hpp
vfx/asl-1.0.42/adobe/implementation/: adam_parser_impl.hpp  expression_parser.hpp  lex_shared.hpp  token.hpp  toroid.hpp
vfx/asl-1.0.42/adobe/utility/: pair.hpp
vfx/asl-1.0.42/documentation/: doxyfile
vfx/asl-1.0.42/documentation/asl/: adam_parser.dox  eve.dox
vfx/asl-1.0.42/documentation/doxygen_support_files/: header.dox
vfx/asl-1.0.42/documentation/html/: abi__safe_8dox.html  accumulate_8dox.html  adam_8hpp.html  adam_8hpp_source.html  adam__evaluate_8dox.html  adam__evaluate_8hpp.html  adam__evaluate_8hpp_source.html  adam__language__reference_8dox.html  adam__parser_8dox.html  adam__parser_8hpp.html  adam__parser_8hpp_source.html  adaptablebinaryfunction_8dox.html  adaptablebinarypredicate_8dox.html  adaptablegenerator_8dox.html  adaptablepredicate_8dox.html  adaptableunaryfunction_8dox.html  adjacent__difference_8dox.html  adjacent__find_8dox.html  adobe_apollo.html  advance_8dox.html  alert_8hpp.html  alert_8hpp_source.html  algorithm_2mismatch_8hpp.html  algorithm_2mismatch_8hpp_source.html  algorithm_2select_8hpp.html  algorithm_2select_8hpp_source.html  algorithm_8hpp.html  algorithm_8hpp_source.html  alloc_8dox.html  allocators_8dox.html  annotated.html  any__iterator_8hpp.html  any__iterator_8hpp_source.html  any__regular_8hpp.html  any__regular_8hpp_source.html  any__regular__fwd_8hpp.html  any__regular__fwd_8hpp_source.html  apollo_8dox.html  arg__stream_8hpp.html  arg__stream_8hpp_source.html  (+2437 more)
vfx/asl-1.0.42/documentation/structure/: mainpage.dox  news.dox
vfx/asl-1.0.42/source/: adam.cpp  adam_evaluate.cpp  adam_parser.cpp  any_regular.cpp  basic_sheet.cpp  eve.cpp  eve_evaluate.cpp  eve_parser.cpp  expression_filter.cpp  expression_parser.cpp  lex_stream.cpp  name.cpp  string_pool.cpp  token.cpp  typeinfo.cpp  virtual_machine.cpp  xml_lex.cpp
vfx/asl-1.0.42/test/adam_tutorial/: adam_tutorial.vcproj  asl_client_config.vsprops
vfx/asl-1.0.42/test/any_iterator/: main.cpp
vfx/asl-1.0.42/test/closed_hash/: main.cpp
vfx/asl-1.0.42/test/eve_smoke/: main.cpp
vfx/asl-1.0.42/test/gil/: any_image_impl.hpp  dynamic_image.cpp  gil_test_config.hpp  image.cpp  main.cpp  pixel.cpp  pixel_iterator.cpp  print_types.hpp  stdafx.h
vfx/asl-1.0.42/test/move/: main.cpp
vfx/asl-1.0.42/test/n_queens/: main.cpp
vfx/asl-1.0.42/test/poly/: poly_test.cpp
vfx/asl-1.0.42/test/property_model_eval/: Jamfile.v2  adam_test_parser.cpp
vfx/asl-1.0.42/test/sudoku/: main.cpp  sudoku_utilities.hpp
vfx/asl-1.0.42/test/vector/: main.cpp
vfx/asl-1.0.42/tools/: VersionInfo.xml  patch_boost.sh
vfx/ofx_plugins/bl_defocus/: BLI_rand.cpp  BLI_rand.h  CMP_defocus.c  CMP_defocus.h  CMakeLists.txt  bl_defocus_plugin.cpp  bl_defocus_plugin.hpp  bl_defocus_processor.cpp  bl_defocus_processor.hpp  bl_zdefocus_plugin.cpp  bl_zdefocus_plugin.hpp  register_plugins.cpp
vfx/ramen/: CDDL_LICENSE.txt  CHANGES.txt  CMakeLists.txt  INSTALL.txt  LICENSE.txt  README.txt  TODO.txt
vfx/ramen/osx/: Info.plist  PkgInfo  macdeploy.sh  ramen.icns  ramendoc.icns
vfx/ramen/osx/icon_work/: icon.psd  naruto.blend  ramendoc.psd
vfx/ramen/ramen/: CMakeLists.txt  config.hpp  main.cpp
vfx/ramen/ramen/GL/: gl.hpp  glu.hpp
vfx/ramen/ramen/IECoreExt/: LineSegmentAlgo.hpp
vfx/ramen/ramen/ImathExt/: ImathBoxAlgo.cpp  ImathBoxAlgo.h  ImathMatrixAlgo.cpp  ImathMatrixAlgo.h
vfx/ramen/ramen/Qr/: QrAbstractSpinBox.cpp  QrAbstractSpinBox.hpp  QrCalculator.cpp  QrCalculator.hpp  QrColor.cpp  QrColor.hpp  QrColorButton.cpp  QrColorButton.hpp  QrContainerWidget.cpp  QrContainerWidget.hpp  QrDoubleSpinBox.cpp  QrDoubleSpinBox.hpp  QrFormatWidget.cpp  QrFormatWidget.hpp  QrLabel.cpp  QrLabel.hpp  QrLabelSeparator.cpp  QrLabelSeparator.hpp  QrSmallToolButton.cpp  QrSmallToolButton.hpp  QrSpinBox.cpp  QrSpinBox.hpp  QrUtilityWindow.cpp  QrUtilityWindow.hpp  parser.cpp  parser.h
vfx/ramen/ramen/anim/: curve.cpp  curve.hpp  curve_algorithm.cpp  curve_algorithm.hpp  curve_fwd.hpp  curve_to_half_lut.cpp  curve_to_half_lut.hpp  fwd_diff_cubic_evaluator.hpp  keyframe.cpp  keyframe.hpp  keyframe_vector.hpp  point2.cpp  point2.hpp  track.cpp  track.hpp  track_fwd.hpp
vfx/ramen/ramen/app/: QRamenApp.cpp  QRamenApp.hpp  application.cpp  application.hpp  application_fwd.hpp  composition.cpp  composition.hpp  composition_fwd.hpp  document.cpp  document.hpp  export_selected_nodes.cpp  export_selected_nodes.hpp  import_composition.cpp  import_composition.hpp  preferences.cpp  preferences.hpp  unique_name_map.cpp  unique_name_map.hpp
vfx/ramen/ramen/bezier/: algorithm.hpp  bernstein.hpp  curve.hpp
vfx/ramen/ramen/dataflow/: algorithm.hpp  base_node.hpp  edge.hpp  graph.hpp  plug.hpp
vfx/ramen/ramen/flipbook/: FileReadingThread.cpp  FileReadingThread.h  ImageBuffers.cpp  ImageBuffers.h  Timer.cpp  flipbook.cpp  flipbook.hpp  flipbook_fwd.hpp
vfx/ramen/ramen/ggems/: convex_opt.c  convex_opt.h  fitcurves.c  fitcurves.h  ggveclib.c  graphicsgems.h  nearestpoint.c  nearestpoint.h
vfx/ramen/ramen/image/: agg_renderers.hpp  box_blur.cpp  box_blur.hpp  box_blur_channel.cpp  box_blur_channel.hpp  channel_range.cpp  channel_range.hpp  color.hpp  color_bars.cpp  color_bars.hpp  (+13 more)
vfx/ramen/resources/: qrc_resources.cpp  resources.qrc
vfx/rmaketiled/: CMakeLists.txt  Image.cpp  Image.h  main.cpp  makeTiled.cpp  makeTiled.h
(+1012 files in other folders)
